# c4ai-deepspeed-tutorial

./: README.md  best_training_script.py  pyproject.toml  requirements.txt  utils.py
pytorch/: utils.py
pytorch-lightning/: data.py  deepspeed_train.py  fairscale_train.py  model.py
